fix(ControlPanel): add min-height to prevent overflow stretch in IE11

--- a/client/src/components/Reports/ControlPanel.scss
+++ b/client/src/components/Reports/ControlPanel.scss
@@ -3,6 +3,7 @@
   border-radius: 8px;
   border: 1px solid #dfdfdf;
   padding: 12px 12px 0 12px;
+  min-height: 0%;
 }
 
 .ControlPanel__popover {
